force-app/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <label>メールドメイン</label>
    <description>Websiteから自動抽出したメールドメイン。Data Cloudでのドメインマッチに使用。</description>
    <type>Text</type>
    <length>255</length>
</CustomField>