force-app/main/default/objects/Account/fields/Is_Demo_Seed__c.field-meta.xml
<CustomField>
    <fullName>Is_Demo_Seed__c</fullName>
    <label>デモ用シードデータ</label>
    <description>lh360デモ用に投入したシードデータ識別フラグ。shift_demo_dates.pyによる日付一括シフト対象。</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>