force-app/main/default/objects/Account/fields/Is_Focal_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Focal_Account__c</fullName>
    <label>注力アカウント</label>
    <description>SAEが戦略的に注力する主要アカウント。lh360大型案件追跡ユースケースで週次レポートの対象。</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>