force-app/main/default/objects/Account/recordTypes/PersonAccount.recordType-meta.xml
<RecordType>
    <fullName>PersonAccount</fullName>
    <active>false</active>
    <label>Person Account</label>
</RecordType>