force-app/main/default/objects/Account/recordTypes/SDO_Account_Partner.recordType-meta.xml
<RecordType>
    <fullName>SDO_Account_Partner</fullName>
    <active>true</active>
    <label>パートナー</label>
</RecordType>