force-app/main/default/objects/Account/recordTypes/SDO_Account_Simple.recordType-meta.xml
<RecordType>
    <fullName>SDO_Account_Simple</fullName>
    <active>true</active>
    <label>顧客</label>
</RecordType>