force-app/main/default/objects/Account/recordTypes/SDO_PersonAccounts.recordType-meta.xml
<RecordType>
    <fullName>SDO_PersonAccounts</fullName>
    <active>false</active>
    <label>Person Accounts</label>
</RecordType>